# web_api

./: Dockerfile  docker-compose.yml  pyproject.toml
src/uir_app/application/protocols/: interactor.py
src/uir_app/domain/common/: entities.py
src/uir_app/infrastructure/: config.py
src/uir_app/infrastructure/di/: main.py
src/uir_app/infrastructure/di/providers/: adapters.py
src/uir_app/main/: web_api.py
src/uir_app/presentation/web_api/: exc_handlers.py
src/uir_app/presentation/web_api/routers/: check.py
uir_app/domain/common/: entities.py  value_objects.py
uir_app/infrastructure/: config.py
uir_app/infrastructure/di/: main.py
uir_app/infrastructure/di/providers/: adapters.py
uir_app/main/: web_api.py
uir_app/presentation/web_api/: exc_handlers.py
uir_app/presentation/web_api/routers/: check.py
uir_app/presentation/web_api/schemas/: limit_offest.py
